# unicode-truncate

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  renovate.json
.github/workflows/: publish.yml  rust.yml
benches/: benchmark.rs
src/: lib.rs
tests/: integration.rs  no_std.rs
