[package]
name = "unicode-truncate"
version = "0.2.0"
authors = ["Aetf <aetf@unlimitedcodeworks.xyz>"]
edition = "2018"
rust-version = "1.38.0"

homepage = "https://github.com/Aetf/unicode-truncate"
repository = "https://github.com/Aetf/unicode-truncate"
license = "MIT OR Apache-2.0"
keywords = ["text", "width", "unicode", "truncate", "pad"]
readme = "README.md"
description = """
Unicode-aware algorithm to pad or truncate `str` in terms of displayed width.
"""
exclude = [
    "benches/data/*",
]

[badges]
travis-ci = { repository = "Aetf/unicode-truncate" }

[dependencies]
unicode-width = "0.1"

[dev-dependencies]
criterion = "0.4"

[lib]
bench = false

[features]
default = ["std"]
std = []

[[test]]
name = "integration"
required-features = ["std"]

[[bench]]
name = "benchmark"
harness = false
